# fallstudie_model_engineering

./: .gitignore  .pre-commit-config.yaml  EDA_explorative_Analyse.ipynb  README.md  asdf.csv  eda.ipynb  feature_engineering.ipynb  feature_engineering.py  model.ipynb  model.py  pyproject.toml  report.html  test.csv  test.xlsx
.ipynb_checkpoints/: EDA_explorative_Analyse-checkpoint.ipynb  eda-checkpoint.ipynb  feature_engineering-checkpoint.ipynb  feature_engineering-checkpoint.py  report-checkpoint.html  test-checkpoint.csv
data/: data.xlsx  report.html
models/: columns.joblib  decision_tree_baseline.joblib  one_hot_encoder.joblib
notebooks/: data.xlsx  eda.ipynb  feature_engineering.ipynb  main.ipynb  prototyping.ipynb  scores.csv  scores.xlsx
notebooks/.ipynb_checkpoints/: eda-checkpoint.ipynb  main-checkpoint.ipynb  prototyping-checkpoint.ipynb
src/: config.py  data_loader.py  evaluation.py  feature_engineering.py  features.py  main.py  metrics.py  model.py  models.py  predictions.py  tuning.py
