[project]
name = "fallstudie"
version = "1.0"
description = "IU Master Data Science: fallstudie Model Engineering"
authors = [
    {name = "Erik Reitsam"}
]

license = {text = "-"}
readme = "README.md"
package-mode = false
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
