[tool.poetry]
name = "fallstudie-model-engineering"
version = "1.0"
description = "IU Master Data Science: fallstudie Model Engineering"
authors = ["Erik Reitsam"]
license = "-"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.13"
pandas = ">=2.3.3,<3.0.0"
numpy = ">=2.3.3,<3.0.0"
matplotlib = ">=3.10.6,<4.0.0"
openpyxl = ">=3.1.5,<4.0.0"
scikit-learn = ">=1.7.2,<2.0.0"
jupyterlab = "*"
ipykernel = "^7.0.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv",
    ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "site-packages", "venv", "notebooks",
]

# Same as Black.
line-length = 100
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = ["ALL"]
ignore = [
    "ANN002", "ANN003", "ANN204", "COM812", "D100", "D104", "D107",
    "D203", "D205", "D211", "D213", "FBT001", "FBT002", "FBT003", "N806",
    "PD901", "PGH003", "PLR2004", "T201",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",      # asserts
    "ARG",       # unused function args
    "FBT",       # don't care about booleans as positional arguments in tests
    "PLR2004",   # Magic value used in comparison
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Disable auto-formatting of code examples in docstrings.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
docstring-code-line-length = "dynamic"